# Noisy-VQE-Benchmark-Rayon-scaling-

./: Cargo.toml  README.md  bench_noisy.sh  chi_40.csv  fid_12.csv  fidelity_24.csv  fidelity_24_depth.csv  plot_csv.py  quantum_emulator.rs  vqe_analytic.csv  vqe_noisy.csv  vqe_shots.csv
bins/chi_sweep/: Cargo.toml
bins/chi_sweep/src/: main.rs
bins/emulator/: Cargo.toml
bins/emulator/src/: main.rs
bins/error_sweep/: Cargo.toml
bins/error_sweep/src/: main.rs
bins/fidelity_sweep/: Cargo.toml
bins/fidelity_sweep/src/: main.rs
crates/quantum/: Cargo.toml
crates/quantum/src/: energy.rs  energy_shots.rs  env.rs  gates.rs  hamiltonian.rs  lib.rs  measurement.rs  noise.rs  observables.rs  shot_estimator.rs
crates/quantum/tests/: bell.rs  energy.rs  energy_shots.rs  heisenberg.rs  observables.rs
crates/rng/: Cargo.toml
crates/rng/src/: lib.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: grad.rs  gradient_vqe.rs  lib.rs  output.rs  vqe.rs
crates/simulator/tests/: gradient_vqe.rs
crates/tn/: Cargo.toml
crates/tn/src/: lib.rs  mps.rs  truncation.rs
